--- a/_config.yml
+++ b/_config.yml
@@ -100,8 +100,8 @@ analytics:
 author:
   name: "밥고래" # 블로그 닉네임
   avatar: "/assets/images/bread.png" # 블로그 프로필 사진
-  email: "ulight_0@naver.com"
-  etc: "맛난 걸 먹기 위한 공부"
+  bio: "맛난 걸 먹기 위한 공부"
+  location: "Seoul, Korea"
 
   links: # 사이트 링크
 #     - label: "Email"
@@ -116,9 +116,9 @@ author:
 #     - label: "Facebook"
 #       icon: "fab fa-fw fa-facebook-square"
 #       # url: "https://facebook.com/"
-#     - label: "GitHub"
-#       icon: "fab fa-fw fa-github"
-#       url: "https://github.com/"
+     - label: "GitHub"
+       icon: "fab fa-fw fa-github"
+       url: "https://github.com/JS042"
 #     - label: "Instagram"
 #       icon: "fab fa-fw fa-instagram"
 #       url: "https://www.instagram.com/"
