--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,14 +3,11 @@ main:
   - title: "Home"
     url: https://JS042.github.io/
 
-  - title: "GitHub"
-    url: https://github.com/JS042
-
   # - title: "Projects"
   #   url: /projects/
 
-  # - title: "Categories"
-  #   url: /categories/
+   - title: "Categories"
+     url: /categories/
 
 # sidebar navigation (categories)
 # 2022.02.15 sidebar update : simple ver.
