--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,7 +12,7 @@ categories:
   - title: "코딩테스트"
     children:
       - title: "알고리즘"
-        url: /categories/알고리즘/
+        url: /categories/algorithm/
       - title: "SQL"
         url: /categories/SQL/
 
