--- a/_config.yml
+++ b/_config.yml
@@ -98,11 +98,10 @@ analytics:
 
 # Site Author
 author:
-  name          : "밥고래 # 블로그 닉네임
+  name          : "밥고래" # 블로그 닉네임
   avatar        : "/assets/images/bread.png" # 블로그 프로필 사진
   email         : "ulight_0@naver.com"
   location      : "Seoul, Korea"
-  bio           : "**맛있는 걸 먹기 위한 공부**"
 
 
   links: # 사이트 링크
