--- a/_config.yml
+++ b/_config.yml
@@ -45,7 +45,7 @@ comments:
     num_posts: # 5 (default)
     colorscheme: # "light" (default), "dark"
   utterances:
-    theme: "photon-dark"
+    theme: "github-light"
     issue_term: "pathname"
   staticman:
     branch: # "master"
