--- a/_config.yml
+++ b/_config.yml
@@ -278,7 +278,7 @@ defaults:
       read_time: #true
       show_date: true
       comments: true
-      # share: true
+      share: true
       related: true
       sidebar:
         nav: "categories"
